Point density sometime seems streched when rendered on GPU #47794

Closed
opened 2016-03-14 17:31:14 +01:00 by Ckiel · 17 comments

System Information
Operating system and graphics card
Windows seven, GPU NVIDIA GeForce GTX750 Ti

Blender Version
Broken: 2.77RC2 1e1118e

Short description of error
i've rendered 200 frames of an animation with point density on GPU, and some frames (54 exactly) have some kind of "streched" point, i've also rendered some of the faulty frames on CPU and no more streching.

GPU render :
http://i68.tinypic.com/wssnpc.png
CPU render :
http://i63.tinypic.com/1t0je0.png

Exact steps for others to reproduce the error
i don't really know how to reproduce this error, i can send you the .blend file and the N° of the frame where it appear.

**System Information** Operating system and graphics card Windows seven, GPU NVIDIA GeForce GTX750 Ti **Blender Version** Broken: 2.77RC2 1e1118e **Short description of error** i've rendered 200 frames of an animation with point density on GPU, and some frames (54 exactly) have some kind of "streched" point, i've also rendered some of the faulty frames on CPU and no more streching. GPU render : http://i68.tinypic.com/wssnpc.png CPU render : http://i63.tinypic.com/1t0je0.png **Exact steps for others to reproduce the error** i don't really know how to reproduce this error, i can send you the .blend file and the N° of the frame where it appear.
Author

Changed status to: 'Open'

Changed status to: 'Open'

#48007 was marked as duplicate of this issue

#48007 was marked as duplicate of this issue
Author

Added subscriber: @Ckiel

Added subscriber: @Ckiel

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

We need a blend file to reproduce the issue.

We need a blend file to reproduce the issue.
Author

ok no problem, just where do i send it ?

ok no problem, just where do i send it ?

You attach it here via Drag & Drop into the comment field. Or press the "Upload File" icon above the comment field.

You attach it here via Drag & Drop into the comment field. Or press the "Upload File" icon above the comment field.
Author

Ok thanks, the project is saved on frame 90 which produce the streched effect.

I've just upgrade my nvidia video driver, just in case, but no luck the problem is still present.

particule point density1.blend

Ok thanks, the project is saved on frame 90 which produce the streched effect. I've just upgrade my nvidia video driver, just in case, but no luck the problem is still present. [particule point density1.blend](https://archive.blender.org/developer/F290802/particule_point_density1.blend)
Author

hello,
For info, the problem is still there in 2.77 22a2853

hello, For info, the problem is still there in 2.77 22a2853

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscriber: @KevinHealy

Added subscriber: @KevinHealy
Member

Added subscribers: @Sergey, @LukasTonne

Added subscribers: @Sergey, @LukasTonne
Sergey Sharybin was assigned by Lukas Tönne 2016-03-31 09:21:20 +02:00
Member

@Sergey: I guess this is mostly your area.

@Sergey: I guess this is mostly your area.

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

This issue was referenced by e50d229273

This issue was referenced by e50d2292733b8d50437a9848fc82ee0715f6dec0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@52f6e4d042

This issue was referenced by blender/cycles@52f6e4d042351f40cdaf9f5586a048b24a5e6576
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47794
No description provided.