Fix T47794: Point density sometime seems stretched when rendered on GPU