intern/cycles/device/device_cuda.cpp
@@ -606,22 +606,27 @@ public:
 				cuda_assert(cuTexRefSetFlags(texref, CU_TRSF_READ_AS_INTEGER));
 			}
 
+			CUaddress_mode address_mode = CU_TR_ADDRESS_MODE_WRAP;
 			switch(extension) {
 				case EXTENSION_REPEAT:
-					cuda_assert(cuTexRefSetAddressMode(texref, 0, CU_TR_ADDRESS_MODE_WRAP));
-					cuda_assert(cuTexRefSetAddressMode(texref, 1, CU_TR_ADDRESS_MODE_WRAP));
+					address_mode = CU_TR_ADDRESS_MODE_WRAP;
 					break;
 				case EXTENSION_EXTEND:
-					cuda_assert(cuTexRefSetAddressMode(texref, 0, CU_TR_ADDRESS_MODE_CLAMP));
-					cuda_assert(cuTexRefSetAddressMode(texref, 1, CU_TR_ADDRESS_MODE_CLAMP));
+					address_mode = CU_TR_ADDRESS_MODE_CLAMP;
 					break;
 				case EXTENSION_CLIP:
-					cuda_assert(cuTexRefSetAddressMode(texref, 0, CU_TR_ADDRESS_MODE_BORDER));
-					cuda_assert(cuTexRefSetAddressMode(texref, 1, CU_TR_ADDRESS_MODE_BORDER));
+					address_mode = CU_TR_ADDRESS_MODE_BORDER;
 					break;
 				default:
 					assert(0);
+					break;
 			}
+			cuda_assert(cuTexRefSetAddressMode(texref, 0, address_mode));
+			cuda_assert(cuTexRefSetAddressMode(texref, 1, address_mode));
+			if(mem.data_depth > 1) {
+				cuda_assert(cuTexRefSetAddressMode(texref, 2, address_mode));
+			}
+
 			cuda_assert(cuTexRefSetFormat(texref, format, mem.data_elements));
 
 			cuda_pop_context();
